--- a/styles/style.css
+++ b/styles/style.css
@@ -189,8 +189,10 @@ main{
 @media(max-width: 620px){
     .hero{
         width:100%;
-        height: 200px;
+        height: 400px;
         margin-top: 100px;
+        justify-content: center;
+        gap: 20px;
     }
     .logo > img {
         height: 80px;
