--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ main{
 @media(max-width: 620px){
     .hero{
         width:100%;
-        height: 400px;
+        height: 200px;
         margin-top: 100px;
         justify-content: center;
         gap: 20px;
@@ -270,8 +270,17 @@ footer{
 }
 
 @media(max-width: 520px){
+    .footer-container{
+        padding: 10px 0;
+    }
+    .footer-top{
+        width: 50px;
+        margin: 0 20px 10px 20px;
+       }
     .footer-bottom{
         justify-content: center;
+        margin: 10px 20px 0px 20px;
         font-size: 10px;
+        gap: 10px;
     }
 }
